--- a/app/static/css/venstar.css
+++ b/app/static/css/venstar.css
@@ -58,9 +58,6 @@ main {
     font-size: 16px;
     border: none;
   }
-
-/* The container <div> - needed to position the dropdown content */
-
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
@@ -88,3 +85,9 @@ main {
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+  #dateButton {
+      color: black;
+      font-weight: bold;
+      background-color: grey;
+  }
