--- a/app/templates/hvac-index.html
+++ b/app/templates/hvac-index.html
@@ -21,6 +21,9 @@
 <!--===============================================================================================-->
 </head>
 <body>
+	<header>
+		<button onclick="history.back()">Go Back</button>
+	</header>
 	
 	<div class="limiter">
 		<div class="container-table100">
