added back button to temps index

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Today's Temps at Kiowa</title>
+	<title>Temps at Kiowa</title>
 	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,10 @@
 <!--===============================================================================================-->
 </head>
 <body>
-	
+	<header>
+		<button onclick="history.back()">Go Back</button>
+	</header>
+
 	<div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
