--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -7,6 +7,10 @@ header {
   background-color: rgb(37, 37, 37);
 }
 
+header button {
+  color: white;
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
