--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -31,8 +31,10 @@ main {
   flex-direction: column;
   justify-content: center;
   
-  margin-left: 50px;
-  margin-top: 50px;    
+  margin-left: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 30px;    
   background-color: aqua;
   border-radius: 30px;
 }
@@ -60,6 +62,12 @@ height: 250px;
 width: 300px;
 align-items: center;
 }
+
+#lightingContainer {
+  height: 250px;
+  width: 300px;
+  align-items: center;
+  }
 
 main input {
   width: 50px;
