landscape state spelling error in dashboard

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -91,7 +91,7 @@
         </section>
         <section id="lightingContainer" class="container">
             <h1>Landscape Lighting Status</h1>
-            <p>Landscape Lighting: {{data.Landscape_state}}</p>
+            <p>Landscape Lighting: {{data.landscape_state}}</p>
             <p>At time: {{data.last_landscape_change}}</p>
         </section>
     </main>
