--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dashboard.css') }}">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="15">
 </head>
 <body>
     <header>
