--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -41,7 +41,7 @@ main {
 }
 
 #thermostatContainer {
-    height: 400px;
+    height: 450px;
     width: 300px;
 }
 
@@ -53,22 +53,27 @@ main {
 }
 
 #temperatureContainer {
-  height: 300px;
+  height: 350px;
   width: 300px;
   align-items: center;
 }
 
-#usageContainer {
+/* #usageContainer {
 height: 150px;
 width: 300px;
 align-items: center;
-}
+} */
 
 #lightingContainer {
-  height: 250px;
+  height: 350px;
   width: 300px;
   align-items: center;
   }
+
+#landscapeDelaySelector {
+  display: flex;
+  flex-direction: row;
+}
 
 main input {
   width: 50px;
@@ -84,7 +89,7 @@ main input {
   width: 200px;
 }
 
-/* Dropdown Button */
+/*                                                  Dropdown Buttons                          */
 .dropbtn {
     background-color: #04AA6D;
     color: white;
@@ -126,8 +131,73 @@ main input {
       background-color: grey;
   }
 
+/* STILL NEED TO DO THIS */
   /* #dateButtonUsage {
     color: black;
     font-weight: bold;
     background-color: grey;
   } */
+/*                                             = THIS IS FOR THE LIGHTING SELECTOR SWITCH                  */
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin: 10px 10px 10px 10px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
