--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -33,6 +33,7 @@
                     <a id="dateButtonUsage" href='/usage/2021-12-08'>GO</a>
                 </div>
             </li> -->
+            <li><a href='/food/schedule'>View Food Schedule</a></li>
         </ul>
     </nav>
     <main>
