added back button to food planner

--- a/app/templates/weekly_food.html
+++ b/app/templates/weekly_food.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <header>
+        <button onclick="history.back()">Go Back</button>
         <h1>Kiowa Food Planner</h1>
+        
     </header>
     <main>
         <table>
