added two new lights to dashboard

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -139,6 +139,16 @@
                 <input id='bedroomLightSwitch' type="checkbox">
                 <span class="slider round"></span>
             </label>
+            <label>Lantern</label>
+            <label class="switch">
+                <input id='lanternLightSwitch' type="checkbox">
+                <span class="slider round"></span>
+            </label>
+            <label>String Lights</label>
+            <label class="switch">
+                <input id='stringLightSwitch' type="checkbox">
+                <span class="slider round"></span>
+            </label>
         </section>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
