--- a/app/templates/hvac-index.html
+++ b/app/templates/hvac-index.html
@@ -5,43 +5,30 @@
 	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="{{ url_for('static', filename='images/icons/favicon.ico') }}"/>					
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='vendor/animate/animate.css') }}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='vendor/select2/select2.min.css') }}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='vendor/perfect-scrollbar/perfect-scrollbar.css') }}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/util.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!--===============================================================================================-->
 </head>
-<body>
+<body style="background-color:blue;">
 	<header>
 		<button onclick="history.back()">Go Back</button>
 	</header>
-	
-	<div class="limiter">
-		<div class="container-table100">
-			<div class="wrap-table100">
-				<div class="table100">
-					<table>
-						<thead>
-							<tr class="table100-head">
-								<th class="column1">Time</th>
-								<th class="column2">Temp</th>
-								<th class="column3">Humidity</th>
-								<th class="column4">Cool Time</th>
-								<th class="column5">Heat Time</th>
+		<div class="container-md" >
+			<div class="card">
+				<div style="height:600px;overflow:scroll;" class="table-responsive rounded-lg">
+					<table class="table align-middle table-hover table-bordered text-center">
+						<thead style="background-color:rgb(55, 55, 70); color:aliceblue;position: sticky;top: 0;">
+							<tr>
+								<th>Time</th>
+								<th>Temp</th>
+								<th>Humidity</th>
+								<th>Cool Time</th>
+								<th>Heat Time</th>
 							</tr>
 						</thead>
-						<tbody id='table-body'>
+						<tbody>
 							{% for item in data.data %}
-    							<tr class=tableRow>
+    							<tr>
 									<td>{{item.time}}</td>
     								<td>{{item.local_temp}}</td>
     								<td>{{item.humidity}}</td>
@@ -53,23 +40,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
-
-	
-
-<!--===============================================================================================-->	
-	<script src="{{ url_for('static', filename='vendor/jquery/jquery-3.2.1.min.js') }}"></script>
-<!--===============================================================================================-->
-	<script src="{{ url_for('static', filename='vendor/bootstrap/js/popper.js') }}"></script>
-	<script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
-<!--===============================================================================================-->
-	<script src="{{ url_for('static', filename='vendor/select2/select2.min.js') }}"></script>
-<!--===============================================================================================-->
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="{{ url_for('static', filename='js/main.js') }}">
-		
-	</script>
 
 </body>
 </html>
