dropdown now defaults to today

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -21,7 +21,7 @@
             <li class="dropdown">
                 <button class="dropbtn">View Temps on Date</button>
                 <div class="dropdown-content">
-                    <input id="dateInputTemp" value="2021-12-08"></input>
+                    <input id="dateInputTemp"></input>
                     <a id="dateButtonTemp" href='/temps/2021-12-08'>GO</a>
                 </div>
             </li>
