--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -34,6 +34,7 @@
                 </div>
             </li> -->
             <li><a href='/food/schedule'>View Food Schedule</a></li>
+            <li><a href='http://192.168.86.38:8000'>Backyard Cam</a></li>
         </ul>
     </nav>
     <main>
