Added recent bedtime time to dashboard

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -121,6 +121,7 @@
         </section>
         <section id="smartThingsContainer" class="container">
             <h1>Kiowa Lighting Status</h1>
+            <p>Last Bedtime: {{data.last_bedtime}}</p>
             <label>Pineapple</label>
             <label class="switch">
                 <input id='pineappleSwitch' type="checkbox">
