fixed name for lantern

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -149,7 +149,7 @@
             </label>
             <label id="stringlightsLabel" class="crossedOutLabel">String Lights</label>
             <label class="switch">
-                <input id='stringlightSwitch' type="checkbox">
+                <input id='stringlightsSwitch' type="checkbox">
                 <span class="slider round"></span>
             </label>
         </section>
